--- a/css/index.css
+++ b/css/index.css
@@ -76,11 +76,13 @@ header .content p {
 }
 
 .menu h2 {
+  width: 100%;
+  max-width: 720px;
   text-align: center;
   color: #8b8440;
   font-size: 1.8rem;
   text-transform: uppercase;
-  padding-bottom: 8px;
+  padding: 0px 32px 8px 32px;
   margin: 0px 128px;
   border-bottom: 2px solid #8b8440;
 }
