--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ nav {
   z-index: 100;
   width: 100%;
   height: 56px;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(8px);
   border-bottom: 2px solid #8b8440;
   display: flex;
@@ -56,13 +56,14 @@ nav .content {
 }
 
 nav .content .left {
-  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
 }
 
-nav .content .left span {
-  color: white;
-  font-size: 1.8rem;
-  font-family: "Quicksand", sans-serif;
+nav .content .left img {
+  width: 100px;
+  margin-top: 2px;
+  cursor: pointer;
 }
 
 nav .content .right {
@@ -96,7 +97,7 @@ main {
 
 footer {
   width: 100%;
-  min-height: 128px;
+  min-height: 256px;
   background: #353535;
   border-top: 2px solid #8b8440;
 }
