--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,7 +42,7 @@ nav {
     z-index: 100;
     width: 100%;
     height: 56px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(8px);
     border-bottom: 2px solid $primary;
     display: flex;
@@ -60,11 +60,12 @@ nav {
         justify-content: space-between;
         padding-left: 16px;
         .left {
-            margin-bottom: 8px;
-            span {
-                color: $white;
-                font-size: 1.8rem;
-                font-family: "Quicksand", sans-serif;
+            display: flex;
+            align-items: center;
+            img {
+                width: 100px;
+                margin-top: 2px;
+                cursor: pointer;
             }
         }
 
@@ -100,7 +101,7 @@ main {
 
 footer {
     width: 100%;
-    min-height: 128px;
+    min-height: 256px;
     background: rgb(53, 53, 53);
     border-top: 2px solid $primary;
 }
