--- a/css/menu.css
+++ b/css/menu.css
@@ -5,6 +5,7 @@ header {
   background-size: cover;
   background-position: 50% 50%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 32px 32px 0px 32px;
@@ -19,5 +20,39 @@ header h1 {
   font-size: 2.2rem;
   text-transform: uppercase;
   border-bottom: 2px solid #8b8440;
+}
+
+header p {
+  text-transform: uppercase;
+  padding-top: 12px;
+  font-size: 0.8rem;
+  color: #5a5a5a;
+}
+
+.menu {
+  width: 100%;
+  max-width: 1366px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu .category {
+  padding: 32px;
+}
+
+.menu .category button {
+  background: none;
+  border: 1px solid #8b8440;
+  color: #8b8440;
+  text-transform: uppercase;
+  padding: 8px 16px;
+  font-size: 0.8rem;
+  margin: 0px 8px;
+}
+
+.menu .category button:active {
+  background: #8b8440;
+  color: white;
 }
 /*# sourceMappingURL=menu.css.map */
