--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -10,6 +10,7 @@ header {
     background-position: 50% 50%;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 32px 32px 0px 32px;
@@ -23,5 +24,38 @@ header {
         font-size: 2.2rem;
         text-transform: uppercase;
         border-bottom: 2px solid $primary;
+    }
+
+    p {
+        text-transform: uppercase;
+        padding-top: 12px;
+        font-size: 0.8rem;
+        color: rgb(90, 90, 90);
+    }
+}
+
+.menu {
+    width: 100%;
+    max-width: 1366px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .category {
+        padding: 32px;
+        button {
+            background: none;
+            border: 1px solid $primary;
+            color: $primary;
+            text-transform: uppercase;
+            padding: 8px 16px;
+            font-size: 0.8rem;
+            margin: 0px 8px;
+    
+            &:active {
+                background: $primary;
+                color: white;
+            }
+        }
     }
 }
