--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,26 @@
+.item {
+  padding: 16px;
+  flex: 0 0 50%;
+  border-bottom: 1px solid lightgray;
+}
+
+.item .title {
+  display: flex;
+  padding-bottom: 8px;
+  justify-content: space-between;
+}
+
+.item .title h3, .item .title h4 {
+  color: #8b8440;
+  font-size: 1.4rem;
+}
+
+.item p {
+  color: #8a8a8a;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
+
 header {
   width: 100%;
   height: 100vh;
@@ -92,29 +115,6 @@ header .content p {
   display: flex;
   flex-wrap: wrap;
   padding: 16px 0px 32px 0px;
-}
-
-.menu .content .item {
-  padding: 16px;
-  flex: 0 0 50%;
-  border-bottom: 1px solid lightgray;
-}
-
-.menu .content .item .title {
-  display: flex;
-  padding-bottom: 8px;
-  justify-content: space-between;
-}
-
-.menu .content .item .title h3, .menu .content .item .title h4 {
-  color: #8b8440;
-  font-size: 1.4rem;
-}
-
-.menu .content .item p {
-  color: #8a8a8a;
-  text-transform: uppercase;
-  font-size: 0.8rem;
 }
 
 .menu button {
