--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,30 @@
+.item {
+  padding: 16px;
+  flex: 0 0 50%;
+  border-bottom: 1px solid lightgray;
+}
+
+.item .title {
+  display: flex;
+  padding-bottom: 8px;
+  justify-content: space-between;
+}
+
+.item .title h3, .item .title h4 {
+  color: #8b8440;
+  font-size: 1.4rem;
+}
+
+.item p {
+  color: #8a8a8a;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
+
 header {
   width: 100%;
   height: 300px;
-  background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.8)), url("https://images.unsplash.com/photo-1568031813264-d394c5d474b9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
+  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8)), url("https://images.unsplash.com/photo-1565895405227-31cffbe0cf86?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
   background-size: cover;
   background-position: 50% 50%;
   display: flex;
@@ -54,5 +77,17 @@ header p {
 .menu .category button:active {
   background: #8b8440;
   color: white;
+}
+
+.menu .category .selected {
+  background: #8b8440;
+  color: white;
+}
+
+.menu .menu-content {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 16px 0px 32px 0px;
 }
 /*# sourceMappingURL=menu.css.map */
