--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,3 +1,5 @@
+@import './components/_menuitem.scss';
+
 $white: rgb(255, 255, 255);
 $primary: rgb(139, 132, 64);
 
@@ -91,28 +93,6 @@ header {
         display: flex;
         flex-wrap: wrap;
         padding: 16px 0px 32px 0px;
-        .item {
-            padding: 16px;
-            flex: 0 0 50%;
-            border-bottom: 1px solid lightgray;
-
-            .title {
-                display: flex;
-                padding-bottom: 8px;
-
-                justify-content: space-between;
-                h3, h4 {
-                    color: $primary;
-                    font-size: 1.4rem;
-                }
-            }
-
-            p {
-                color: rgb(138, 138, 138);
-                text-transform: uppercase;
-                font-size: 0.8rem;
-            }
-        }
     }
 
     button {
