--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,11 +1,13 @@
+@import "./components/_menuitem.scss";
+
 $white: rgb(255, 255, 255);
 $primary: rgb(139, 132, 64);
 
 header {
     width: 100%;
     height: 300px;
-    background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.8)),
-        url("https://images.unsplash.com/photo-1568031813264-d394c5d474b9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8)),
+        url("https://images.unsplash.com/photo-1565895405227-31cffbe0cf86?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
     background-size: cover;
     background-position: 50% 50%;
 
@@ -51,11 +53,23 @@ header {
             padding: 8px 16px;
             font-size: 0.8rem;
             margin: 0px 8px;
-    
+
             &:active {
                 background: $primary;
                 color: white;
             }
         }
+
+        .selected {
+            background: $primary;
+            color: white;
+        }
+    }
+
+    .menu-content {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 16px 0px 32px 0px;
     }
 }
