--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,7 +1,5 @@
 @import "./components/_menuitem.scss";
-
-$white: rgb(255, 255, 255);
-$primary: rgb(139, 132, 64);
+@import "./components/_variables.scss";
 
 header {
     width: 100%;
@@ -16,6 +14,8 @@ header {
     justify-content: center;
     align-items: center;
     padding: 32px 32px 0px 32px;
+
+    text-align: center;
 
     h1 {
         text-align: center;
@@ -42,9 +42,19 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     .category {
+        display: flex;
         padding: 32px;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+        @media (max-width: $breakpoint-tablet) {
+            flex-direction: column;
+            padding: 32px 32px 0px 32px;
+        }
         button {
             background: none;
             border: 1px solid $primary;
@@ -53,6 +63,11 @@ header {
             padding: 8px 16px;
             font-size: 0.8rem;
             margin: 0px 8px;
+
+            @media (max-width: $breakpoint-tablet) {
+                width: 100%;
+                margin: 8px 0px;
+            }
 
             &:active {
                 background: $primary;
@@ -71,5 +86,9 @@ header {
         display: flex;
         flex-wrap: wrap;
         padding: 16px 0px 32px 0px;
+
+        @media (max-width: $breakpoint-tablet) {
+            padding: 16px 32px 32px 32px;
+        }
     }
 }
