--- a/css/index.css
+++ b/css/index.css
@@ -10,9 +10,17 @@
   justify-content: space-between;
 }
 
-.item .title h3, .item .title h4 {
+.item .title h3,
+.item .title h4 {
   color: #8b8440;
   font-size: 1.4rem;
+}
+
+@media (max-width: 768px) {
+  .item .title h3,
+  .item .title h4 {
+    font-size: 1.2rem;
+  }
 }
 
 .item p {
@@ -21,10 +29,16 @@
   font-size: 0.8rem;
 }
 
+@media (max-width: 768px) {
+  .item p {
+    font-size: 0.6rem;
+  }
+}
+
 header {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url("https://images.unsplash.com/photo-1560963689-de7010066a17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
+  background: linear-gradient(rgba(119, 103, 103, 0.4), rgba(0, 0, 0, 0.6)), url("https://images.unsplash.com/photo-1560963689-de7010066a17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
   background-size: cover;
   background-position: 50% 50%;
   box-shadow: 0px -6px 40px -3px rgba(0, 0, 0, 0.61) inset;
