--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -43,17 +43,22 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 32px;
+
+    @media (max-width: $breakpoint-mobile) {
+        padding: 16px;
+    }
 
     .category {
         display: flex;
-        padding: 32px;
+        padding: 0px 32px 16px 32px;
         align-items: center;
         justify-content: center;
         width: 100%;
 
         @media (max-width: $breakpoint-tablet) {
             flex-direction: column;
-            padding: 32px 32px 0px 32px;
+            padding: 0px;
         }
         button {
             background: none;
@@ -85,10 +90,10 @@ header {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-        padding: 16px 0px 32px 0px;
 
         @media (max-width: $breakpoint-tablet) {
-            padding: 16px 32px 32px 32px;
+            flex-direction: column;
+            // padding: 16px 32px 32px 32px;
         }
     }
 }
