Added location and opening hours.

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ main {
 footer {
   width: 100%;
   min-height: 256px;
-  background: #353535;
+  background: #1d1d1d;
   border-top: 2px solid #8b8440;
 }
 /*# sourceMappingURL=main.css.map */
