--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,12 @@ header .content p {
   border-bottom: 2px solid #8b8440;
 }
 
+@media (max-width: 480px) {
+  .menu h2 {
+    font-size: 1.4rem;
+  }
+}
+
 .menu .content {
   width: 100%;
   display: flex;
@@ -196,5 +202,39 @@ header .content p {
 .menu button:active {
   background: #8b8440;
   color: white;
+}
+
+.location {
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("https://images.unsplash.com/photo-1558267748-a210b34249c9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
+  background-size: cover;
+  background-position: 50% 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 32px;
+}
+
+.location h2 {
+  width: 100%;
+  max-width: 720px;
+  text-align: center;
+  color: white;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  padding: 0px 32px 8px 32px;
+  margin: 0px 128px;
+  border-bottom: 2px solid white;
+}
+
+@media (max-width: 480px) {
+  .location h2 {
+    font-size: 1.4rem;
+  }
+}
+
+.location h3 {
+  color: white;
+  padding-top: 32px;
 }
 /*# sourceMappingURL=index.css.map */
