--- a/css/menu.css
+++ b/css/menu.css
@@ -60,11 +60,23 @@ header h1 {
   border-bottom: 2px solid #8b8440;
 }
 
+@media (max-width: 480px) {
+  header h1 {
+    font-size: 1.8rem;
+  }
+}
+
 header p {
   text-transform: uppercase;
   padding-top: 12px;
   font-size: 0.8rem;
   color: #5a5a5a;
+}
+
+@media (max-width: 480px) {
+  header p {
+    font-size: 0.6rem;
+  }
 }
 
 .menu {
