--- a/sass/index.scss
+++ b/sass/index.scss
@@ -118,6 +118,11 @@ header {
         padding: 0px 32px 8px 32px;
         margin: 0px 128px;
         border-bottom: 2px solid $primary;
+
+        @media (max-width: $breakpoint-mobile) {
+            font-size: 1.4rem;
+        }
+    
     }
 
     .content {
@@ -141,7 +146,41 @@ header {
 
         &:active {
             background: $primary;
-            color: white;
+            color: $white;
         }
+    }
+}
+
+.location {
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(('https://images.unsplash.com/photo-1558267748-a210b34249c9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80'));
+    background-size: cover;
+    background-position: 50% 50%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 32px;
+
+    h2 {
+        width: 100%;
+        max-width: 720px;
+        text-align: center;
+        color: $white;
+        font-size: 1.8rem;
+        text-transform: uppercase;
+        padding: 0px 32px 8px 32px;
+        margin: 0px 128px;
+        border-bottom: 2px solid $white;
+
+        @media (max-width: $breakpoint-mobile) {
+            font-size: 1.4rem;
+        }
+    }
+
+    h3 {
+        color: $white;
+        padding-top: 32px;
     }
 }
