--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -26,6 +26,10 @@ header {
         font-size: 2.2rem;
         text-transform: uppercase;
         border-bottom: 2px solid $primary;
+
+        @media (max-width: $breakpoint-mobile) {
+            font-size: 1.8rem;
+        }
     }
 
     p {
@@ -33,6 +37,10 @@ header {
         padding-top: 12px;
         font-size: 0.8rem;
         color: rgb(90, 90, 90);
+
+        @media (max-width: $breakpoint-mobile) {
+            font-size: 0.6rem;
+        }
     }
 }
 
