--- a/css/index.css
+++ b/css/index.css
@@ -223,7 +223,7 @@ header .content p {
   font-size: 1.8rem;
   text-transform: uppercase;
   padding: 0px 32px 8px 32px;
-  margin: 0px 128px;
+  margin: 0px 128px 32px 128px;
   border-bottom: 2px solid white;
 }
 
@@ -235,6 +235,12 @@ header .content p {
 
 .location h3 {
   color: white;
-  padding-top: 32px;
+  padding: 0px 0px 8px 0px;
+}
+
+.location p {
+  color: white;
+  font-size: 0.8rem;
+  padding-bottom: 32px;
 }
 /*# sourceMappingURL=index.css.map */
