--- a/css/menu.css
+++ b/css/menu.css
@@ -37,8 +37,8 @@
 
 header {
   width: 100%;
-  height: 300px;
-  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8)), url("https://images.unsplash.com/photo-1565895405227-31cffbe0cf86?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
+  height: 320px;
+  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.85)), url("https://images.unsplash.com/photo-1565895405227-31cffbe0cf86?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
   background-size: cover;
   background-position: 50% 50%;
   display: flex;
@@ -47,6 +47,12 @@ header {
   align-items: center;
   padding: 32px 32px 0px 32px;
   text-align: center;
+}
+
+@media (max-width: 480px) {
+  header {
+    height: 240px;
+  }
 }
 
 header h1 {
@@ -71,6 +77,7 @@ header p {
   padding-top: 12px;
   font-size: 0.8rem;
   color: #5a5a5a;
+  line-height: 150%;
 }
 
 @media (max-width: 480px) {
