--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -3,8 +3,8 @@
 
 header {
     width: 100%;
-    height: 300px;
-    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8)),
+    height: 320px;
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.85)),
         url("https://images.unsplash.com/photo-1565895405227-31cffbe0cf86?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
     background-size: cover;
     background-position: 50% 50%;
@@ -16,6 +16,10 @@ header {
     padding: 32px 32px 0px 32px;
 
     text-align: center;
+
+    @media (max-width: $breakpoint-mobile) {
+        height: 240px;
+    }
 
     h1 {
         text-align: center;
@@ -37,6 +41,7 @@ header {
         padding-top: 12px;
         font-size: 0.8rem;
         color: rgb(90, 90, 90);
+        line-height: 150%;
 
         @media (max-width: $breakpoint-mobile) {
             font-size: 0.6rem;
