--- a/css/about.css
+++ b/css/about.css
@@ -86,6 +86,30 @@ header p {
   }
 }
 
+.title {
+  width: 100%;
+  max-width: 720px;
+  display: flex;
+  justify-content: center;
+  padding: 32px;
+}
+
+.title h2 {
+  text-align: center;
+  width: 100%;
+  color: #8b8440;
+  padding-bottom: 8px;
+  font-size: 2.2rem;
+  text-transform: uppercase;
+  border-bottom: 2px solid #8b8440;
+}
+
+@media (max-width: 480px) {
+  .title h2 {
+    font-size: 1.8rem;
+  }
+}
+
 .who {
   width: 100%;
   padding: 32px;
@@ -95,7 +119,8 @@ header p {
 }
 
 .who img {
-  width: 400px;
+  width: 240px;
+  height: 240px;
   object-fit: cover;
   margin-right: 16px;
   border: 1px solid gray;
