--- a/sass/about.scss
+++ b/sass/about.scss
@@ -49,6 +49,27 @@ header {
     }
 }
 
+.title {
+    width: 100%;
+    max-width: 720px;
+    display: flex;
+    justify-content: center;
+    padding: 32px;
+    h2 {
+        text-align: center;
+        width: 100%;
+        color: $primary;
+        padding-bottom: 8px;
+        font-size: 2.2rem;
+        text-transform: uppercase;
+        border-bottom: 2px solid $primary;
+        
+        @media (max-width: $breakpoint-mobile) {
+            font-size: 1.8rem;
+        }
+    }
+}
+
 .who {
     width: 100%;
     padding: 32px;
@@ -57,7 +78,8 @@ header {
     align-items: center;
 
     img {
-        width: 400px;
+        width: 240px;
+        height: 240px;
         object-fit: cover;
         margin-right: 16px;
         border: 1px solid gray;
