--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,6 +50,10 @@ nav {
     position: fixed;
     top: 0;
 
+    @media (max-width: $breakpoint-tablet) {
+        height: auto;
+    }
+
     .content {
         width: 1366px;
         height: 100%;
@@ -57,6 +61,12 @@ nav {
         align-items: center;
         justify-content: space-between;
         padding-left: 16px;
+        flex-direction: row;
+
+        @media (max-width: $breakpoint-tablet) {
+            flex-direction: column;
+            padding: 0;
+        }
         .left {
             display: flex;
             align-items: center;
@@ -65,14 +75,20 @@ nav {
                 margin-top: 2px;
                 cursor: pointer;
             }
+
+            @media (max-width: $breakpoint-tablet) {
+                padding: 16px;
+            }
         }
 
         .right {
             height: 100%;
             display: flex;
+            flex-direction: row;
 
             @media (max-width: $breakpoint-tablet) {
-                display: none;
+                width: 100%;
+                flex-direction: column;
             }
 
             a {
@@ -85,6 +101,11 @@ nav {
                 font-family: "Quicksand", sans-serif;
                 text-transform: uppercase;
                 font-size: 0.8rem;
+
+                @media (max-width: $breakpoint-tablet) {
+                    width: 100%;
+                    padding: 16px;
+                }
             }
 
             .current {
