--- a/css/index.css
+++ b/css/index.css
@@ -38,10 +38,10 @@
 header {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(119, 103, 103, 0.4), rgba(0, 0, 0, 0.6)), url("https://images.unsplash.com/photo-1560963689-de7010066a17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url("../assets/images/hero.jpeg");
   background-size: cover;
   background-position: 50% 50%;
-  box-shadow: 0px -6px 40px -3px rgba(0, 0, 0, 0.61) inset;
+  box-shadow: 0px -6px 40px -3px rgba(0, 0, 0, 0.6) inset;
   position: relative;
   display: flex;
   justify-content: center;
@@ -213,6 +213,7 @@ header .content p {
   flex-direction: column;
   align-items: center;
   padding: 32px;
+  text-align: center;
 }
 
 .location h2 {
