--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,11 +4,11 @@
 header {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(119, 103, 103, 0.4), rgba(0, 0, 0, 0.6)),
-        url("https://images.unsplash.com/photo-1560963689-de7010066a17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+        url("../assets/images/hero.jpeg");
     background-size: cover;
     background-position: 50% 50%;
-    box-shadow: 0px -6px 40px -3px rgba(0, 0, 0, 0.61) inset;
+    box-shadow: 0px -6px 40px -3px rgba(0, 0, 0, 0.6) inset;
     position: relative;
     display: flex;
     justify-content: center;
@@ -163,6 +163,8 @@ header {
 
     padding: 32px;
 
+    text-align: center;
+
     h2 {
         width: 100%;
         max-width: 720px;
@@ -171,7 +173,7 @@ header {
         font-size: 1.8rem;
         text-transform: uppercase;
         padding: 0px 32px 8px 32px;
-        margin: 0px 128px 32px 128px;
+    margin: 0px 128px 32px 128px;
         border-bottom: 2px solid $white;
 
         @media (max-width: $breakpoint-mobile) {
