--- a/sass/main.scss
+++ b/sass/main.scss
@@ -68,8 +68,10 @@ nav {
             padding: 0;
         }
         .left {
+            width: 100%;
             display: flex;
             align-items: center;
+            justify-content: space-between;
             img {
                 width: 100px;
                 margin-top: 2px;
@@ -78,6 +80,26 @@ nav {
 
             @media (max-width: $breakpoint-tablet) {
                 padding: 16px;
+            }
+
+            .hamburger {
+                width: 24px;
+                height: 16px;
+                display: none;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                cursor: pointer;
+
+                @media (max-width: $breakpoint-tablet) {
+                    display: flex;
+                }
+
+                div {
+                    width: 100%;
+                    height: 2px;
+                    background: $white;
+                }
             }
         }
 
@@ -89,6 +111,7 @@ nav {
             @media (max-width: $breakpoint-tablet) {
                 width: 100%;
                 flex-direction: column;
+                display: none;
             }
 
             a {
@@ -111,6 +134,10 @@ nav {
             .current {
                 background: $primary;
             }
+        }
+
+        .showNavigation {
+            display: flex;
         }
     }
 }
