--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,7 @@ header .content {
   position: absolute;
   color: white;
   text-shadow: 3px 3px 20px #000;
+  padding: 32px;
 }
 
 header .content h1 {
@@ -199,7 +200,7 @@ header .content p {
   font-size: 0.8rem;
 }
 
-.menu button:active {
+.menu button:active, .menu button:focus {
   background: #8b8440;
   color: white;
 }
