--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,7 @@ nav .content .right a {
   font-family: "Quicksand", sans-serif;
   text-transform: uppercase;
   font-size: 0.8rem;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.6);
 }
 
 @media (max-width: 768px) {
@@ -143,8 +144,18 @@ nav .content .right a {
   }
 }
 
+nav .content .right a:active, nav .content .right a:focus {
+  background: rgba(255, 255, 255, 0.1);
+  outline: none;
+}
+
 nav .content .right .current {
   background: #8b8440;
+}
+
+nav .content .right .current:active, nav .content .right .current:focus {
+  background: #66612f;
+  outline: none;
 }
 
 nav .content .showNavigation {
