--- a/css/menu.css
+++ b/css/menu.css
@@ -45,7 +45,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 32px 32px 0px 32px;
+  padding: 88px 32px 32px 32px;
   text-align: center;
 }
 
@@ -139,8 +139,19 @@ header p {
   color: white;
 }
 
+.menu .category button:focus {
+  background: rgba(0, 0, 0, 0.6);
+  border: 1px solid transparent;
+  color: white;
+}
+
 .menu .category .selected {
   background: #8b8440;
+  color: white;
+}
+
+.menu .category .selected:active, .menu .category .selected:focus {
+  background: #66612f;
   color: white;
 }
 
