--- a/sass/index.scss
+++ b/sass/index.scss
@@ -19,6 +19,7 @@ header {
         position: absolute;
         color: $white;
         text-shadow: 3px 3px 20px #000;
+        padding: 32px;
 
         h1 {
             font-size: 2.8em;
@@ -144,7 +145,7 @@ header {
         padding: 8px 16px;
         font-size: 0.8rem;
 
-        &:active {
+        &:active, &:focus {
             background: $primary;
             color: $white;
         }
