--- a/sass/main.scss
+++ b/sass/main.scss
@@ -125,14 +125,28 @@ nav {
                 text-transform: uppercase;
                 font-size: 0.8rem;
 
+                -webkit-tap-highlight-color: rgba(0, 0, 0, 0.6);
+
                 @media (max-width: $breakpoint-tablet) {
                     width: 100%;
                     padding: 16px;
+                }
+
+                &:active,
+                &:focus {
+                    background: rgba(255, 255, 255, 0.1);
+                    outline: none;
                 }
             }
 
             .current {
                 background: $primary;
+
+                &:active,
+                &:focus {
+                    background: rgb(102, 97, 47);
+                    outline: none;
+                }
             }
         }
 
